welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: value droite is not a member of Unit
		recule();recule();recule();recule();recule();recule() droite();avance();gauche()}
                                                                      ^